# workshop-aberto-02

./: .env  pipeline_00.py  pyproject.toml
