[tool.poetry]
name = "workshop-aberto-02"
version = "0.1.0"
description = ""
authors = ["tuliovaleriano <mtuliovaleriano@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
gdown = "^5.2.0"
duckdb = "^1.1.3"
streamlit = "^1.41.1"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
